updated home.html css links to work

--- a/apps/randomrouting/templates/randomrouting/home.html
+++ b/apps/randomrouting/templates/randomrouting/home.html
@@ -5,14 +5,16 @@
     <meta description='Main Page for Landscapes, a random routing practice App'
     <meta charset='utf-8'/>
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'game/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'game/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'randomrouting/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'randomrouting/style.css' %}">
     <link rel="shortcut icon" href="{% static 'ninjas/favicon.ico' %}">
-
 </head>
 <body>
     <div id='wrapper'>
         <h1>Hello</h1>
     </div>
 </body>
+<footer>
+    <p>by Troy Center, Coding Dojo May 22, 2017 Cohort, Seattle.</p>
+</footer>
 </html>
