finished home page

--- a/apps/randomrouting/templates/randomrouting/home.html
+++ b/apps/randomrouting/templates/randomrouting/home.html
@@ -11,7 +11,12 @@
 </head>
 <body>
     <div id='wrapper'>
-        <h1>Hello</h1>
+        <h1>Welcome!</h1>
+        <h3>Enter any number 1 - 50 as a url</h3>
+        <h3>parameter, for example "/32"</h3>
+        <br>
+        <p><strong>Instruction:</strong> You will be updating the URL path in your browser<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;appending "/32", ie: http://127.0.0.1:8000/32. Enjoy!</p>
     </div>
 </body>
 <footer>
