--- a/apps/randomrouting/static/randomrouting/style.css
+++ b/apps/randomrouting/static/randomrouting/style.css
@@ -17,7 +17,7 @@
 /***************************************************/
 
 #wrapper {
-        background-image: linear-gradient(300deg,orange, white);
+        background-image: linear-gradient(50deg, beige, white);
         height: 1800px;
         width: 1200px;
         padding: 100px;
