--- a/apps/randomrouting/static/randomrouting/style.css
+++ b/apps/randomrouting/static/randomrouting/style.css
@@ -21,6 +21,10 @@
         height: 1800px;
         width: 1200px;
         padding: 100px;
+        text-align: center;
+}
+img {
+    width: 1000px;
 }
 
 /***************************************************/
