--- a/apps/randomrouting/templates/randomrouting/home.html
+++ b/apps/randomrouting/templates/randomrouting/home.html
@@ -7,7 +7,7 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'randomrouting/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'randomrouting/style.css' %}">
-    <link rel="shortcut icon" href="{% static 'ninjas/favicon.ico' %}">
+    <link rel="shortcut icon" href="{% static 'randomrouting/django_favicon.ico' %}">
 </head>
 <body>
     <div id='wrapper'>
